# rust-cli

./: Cargo.toml  README.md
src/: main.rs  models.rs
