[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
